@@ -62,7 +62,7 @@ my $runtime_requires = {
   'Class::Inspector'         => '1.24',
   'Config::Any'              => '0.20',
   'Context::Preserve'        => '0.01',
-  'Data::Dumper::Concise'    => '1.000',
+  'Data::Dumper::Concise'    => '2.020',
   'Data::Page'               => '2.00',
   'Hash::Merge'              => '0.12',
   'MRO::Compat'              => '0.09',
